stateless-poc-I/kubernetes-manifests/dashboard/ingres-dash3.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test2
  namespace: kube-system
  labels:
    k8s-app: kubernetes-dashboard
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ieatenmpd104-4.athtem.eei.ericsson.se
    http:
      paths:
      - path: /dash
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 9091
  tls:
  - hosts:
    - ieatenmpd104-4.athtem.eei.ericsson.se
